--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
 
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light">
+        <a class="navbar-brand text-center" href="#">
+          <img src="" width="30" height="30" class="d-inline-block text-center  align-top" alt="" loading="lazy">gallery
+        </a>
+        
+    </nav>
+
     <div class="container">
 
         <div class="row">
